refactor(like): IN 절 청크 처리·중복 그룹핑 제거·페이지 안정화(티브레이커 추가) 및 count 최적화